syntax = "proto3";
// Este package determina a estrutura de pastas
// buf:lint:ignore PACKAGE_DIRECTORY_MATCH
package com.jacksonfdam.transportdisplaykmp;

// Estas opções são importantes para a geração
option java_package = "com.jacksonfdam.transportdisplaykmp.models";
option java_multiple_files = true;

message Station {
  string name = 1;
}

message LineInfo {
  string line_number = 1;
  string transport_mode = 2; // e.g., "METRO", "TRAM"
}

message TripUpdate {
  Station current_station = 1;
  LineInfo line_info = 2;
  repeated Station next_stations = 3;
  Station final_destination = 4;
}
